// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmTextMarkdown.vue has the expected html structure 1`] = `
<div
  class="tm-text-markdown"
>
  <h2
    id="loading%E2%80%A6"
  >
    Loading…
  </h2>
  

  <p>
    Loading…
  </p>
  

</div>
`;

exports[`TmTextMarkdown.vue has the expected html structure 2`] = `
<div
  class="tm-text-markdown"
>
  <h2
    id="hello!"
  >
    hello!
  </h2>
  

  <p>
    <code>
      code
    </code>
  </p>
  

  <p>
    <a
      href="https://google.com"
    >
      link
    </a>
  </p>
  

</div>
`;
